--- a/app/reg.html
+++ b/app/reg.html
@@ -22,6 +22,7 @@
         <!-- The roof of the footer -->
         <div class="footer-top"></div>
 
+        <!-- The footer content -->
         <div class="base">
             <h2>Studenträddarna</h2>
 
