not even half done

--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,26 @@
 
 <body>
 
+<!--Header with navbar here-->
+<!--End header-->
 
+<!-- Main content-->
+<!--Introduction of the page-->
+<h1>Välkomen</h1>
+<p>Vivamus risus orci, iaculis euismod eleifend non, varius eget nulla. </p>
+<img src="../images/container-complex.jpg" alt="Containerlägenheter">
 
+<!--Offers-->
+<section class="rent-cards">
+  <h2>Lediga lägenheter</h2>
+  <div class="rent-card">
+    
+  </div>
+</section>
+<!--End main content-->
+
+<!--footer here-->
+<!--End footer-->
 </body>
 
 </html>
