Louis settings + footer correction + start of register page

--- a/app/reg.html
+++ b/app/reg.html
@@ -15,6 +15,44 @@
 
 <body>
 
+    <main id="register">
+
+        <div class="register-top">
+            <img src="" alt="">
+            <h1>Registrera dig</h1>
+            <p>Vivamus risus orci, iaculis euismod eleifend non, varius eget nulla. Donec iaculis maximus finibus. Fusce tempor
+                lobortis est, nec rhoncus erat vehicula sed. Nullam non tempus diam, sit amet lobortis sapien. Nunc placerat
+                scelerisque nibh, ac rhoncus augue pharetra nec. Maecenas sodales sem at tincidunt tincidunt.</p>
+        </div>
+
+        <div class="form">
+            <form>
+                <input>
+                <input>
+                <input>
+                <input>
+                <button>Registrera</button>
+            </form>
+        </div>
+
+        <div class="cite-collection">
+            <div class="cite">
+                <p class="sentence">Nulla facilisi. Curabitur</p>
+                <p class="person">Rik Student</p>
+            </div>
+            <div class="cite">
+                <p class="sentence">Nulla facilisi. Curabitur interdum quam leo, ac tincidunt felis tristique non.</p>
+                <p class="person">Studenträddarna</p>
+            </div>
+            <div class="cite">
+                <p class="sentence">Nulla facilisi. Curabitur interdum quam leo, ac tincidunt felis tristique non. Phasellus ac diam egestas,
+                    pulvinar risus in, egestas sapien. </p>
+                <p class="person">Fattig Student</p>
+            </div>
+        </div>
+
+    </main>
+
     <!--
         FOOTER
     -->
