--- a/app/index.html
+++ b/app/index.html
@@ -15,26 +15,88 @@
 
 <body>
 
-<!--Header with navbar here-->
-<!--End header-->
+  <!--Header with navbar here-->
+  <!--End header-->
 
-<!-- Main content-->
-<!--Introduction of the page-->
-<h1>Välkomen</h1>
-<p>Vivamus risus orci, iaculis euismod eleifend non, varius eget nulla. </p>
-<img src="../images/container-complex.jpg" alt="Containerlägenheter">
+  <!-- 
+    MAIN CONTENT
+  -->
 
-<!--Offers-->
-<section class="rent-cards">
-  <h2>Lediga lägenheter</h2>
-  <div class="rent-card">
-    
+  <!--Introduction of the page-->
+  <div class="introduction">
+    <h1>Välkommen</h1>
+
+    <p class="info">
+      Vivamus risus orci, iaculis euismod eleifend non, varius eget nulla. 
+    </p>
+
+    <p class="more-info">
+      Donec iaculis maximus finibus. Fusce tempor lobortis est, nec rhoncus erat vehicula sed. Nullam non tempus diam, sit amet lobortis sapien. Nunc placerat scelerisque nibh, ac rhoncus augue pharetra nec. 
+    </p>
+
+    <img src="../images/container-complex.jpg" alt="Containerlägenheter">
   </div>
-</section>
-<!--End main content-->
 
-<!--footer here-->
-<!--End footer-->
+  <!--Offers-->
+  <section class="offers">
+    <h2>Lediga bostäder</h2>
+    <a href="#" class="rent-card">
+      <img src="../images/container1.jpg" alt="Containerlägenhet">
+      <h2>Furutåvägen 2</h2>
+    </a>
+    <a href="#" class="rent-card">
+        <img src="../images/container2.jpg" alt="Containerlägenhet">
+        <h2>Furutåvägen 3</h2>
+      </a>
+      <a href="#" class="rent-card">
+          <img src="../images/flat1.jpg" alt="Containerlägenhet">
+          <h2>Furutåvägen 4</h2>
+        </a>
+  </section>
+  <!--End main content-->
+
+  <!--
+        FOOTER
+    -->
+  <footer>
+    <!-- The roof of the footer -->
+    <div class="footer-top"></div>
+
+    <!-- The footer content -->
+    <div class="base">
+      <h2>Studenträddarna</h2>
+
+      <!-- Contact -->
+      <div class="contact">
+        <p class="mejl">studentraddarna@live.se</p>
+        <p class="telephone">0470-123 567</p>
+      </div>
+
+      <!-- Navigation -->
+      <ul class="navigation">
+        <li>
+          <a href="">Lediga bostäder</a>
+        </li>
+        <li>
+          <a href="">Registrering</a>
+        </li>
+        <li>
+          <a href="">Om oss</a>
+        </li>
+        <li>
+          <a href="">Mina sidor</a>
+        </li>
+      </ul>
+
+      <!-- Social links -->
+      <div class="social">
+        <span class="fa fa-facebook-square"></span>
+        <span class="fa fa-twitter"></span>
+        <span class="fa fa-instagram"></span>
+      </div>
+    </div>
+  </footer>
+  <!--End footer-->
 </body>
 
 </html>
