Finished register page

--- a/app/reg.html
+++ b/app/reg.html
@@ -18,7 +18,7 @@
     <main id="register">
 
         <div class="register-top">
-            <img src="" alt="">
+            <img src="images/reg.jpg" alt="Registrera dig">
             <h1>Registrera dig</h1>
             <p>Vivamus risus orci, iaculis euismod eleifend non, varius eget nulla. Donec iaculis maximus finibus. Fusce tempor
                 lobortis est, nec rhoncus erat vehicula sed. Nullam non tempus diam, sit amet lobortis sapien. Nunc placerat
@@ -27,10 +27,10 @@
 
         <div class="form">
             <form>
-                <input>
-                <input>
-                <input>
-                <input>
+                <input type="text" id="firstname" name="firstname" placeholder="Förnamn">
+                <input type="text" id="lastname" name="lastname" placeholder="Efternamn">
+                <input type="text" id="telephone" name="telephone" placeholder="Telefon">
+                <input type="text" id="email" name="email" placeholder="Mejladress">
                 <button>Registrera</button>
             </form>
         </div>
