index page updated

--- a/app/index.html
+++ b/app/index.html
@@ -27,11 +27,12 @@
     <h1>Välkommen</h1>
 
     <p class="info">
-      Vivamus risus orci, iaculis euismod eleifend non, varius eget nulla. 
+      Vivamus risus orci, iaculis euismod eleifend non, varius eget nulla.
     </p>
 
     <p class="more-info">
-      Donec iaculis maximus finibus. Fusce tempor lobortis est, nec rhoncus erat vehicula sed. Nullam non tempus diam, sit amet lobortis sapien. Nunc placerat scelerisque nibh, ac rhoncus augue pharetra nec. 
+      Donec iaculis maximus finibus. Fusce tempor lobortis est, nec rhoncus erat vehicula sed. Nullam non tempus diam, sit amet
+      lobortis sapien. Nunc placerat scelerisque nibh, ac rhoncus augue pharetra nec.
     </p>
 
     <img src="../images/container-complex.jpg" alt="Containerlägenheter">
@@ -40,18 +41,97 @@
   <!--Offers-->
   <section class="offers">
     <h2>Lediga bostäder</h2>
-    <a href="#" class="rent-card">
-      <img src="../images/container1.jpg" alt="Containerlägenhet">
-      <h2>Furutåvägen 2</h2>
-    </a>
-    <a href="#" class="rent-card">
+
+    <!--Containers-->
+    <div class="category">
+      <h3>Containrar</h3>
+      <svg height="1" width="90vw">
+        <line x1="0" y1="0" x2="90vw" y2="0"></line>
+      </svg>
+    </div>
+
+    <div class="container">
+      <a href="#" class="rent-card">
+        <img src="../images/container1.jpg" alt="Containerlägenhet">
+        <h2>Furutåvägen 2</h2>
+
+        <div class="card-info">
+
+          <div class="card-meta">
+            <div class="size">
+              13 m
+              <sup>2</sup>
+            </div>
+
+            <div class="price">
+              3100 kr/mån
+            </div>
+          </div>
+
+          <p>
+            Suspendisse congue congue neque ut pulvinar. Sed ut luctus mi. Sed eget odio tellus. Ut sit amet dolor tellus.
+          </p>
+        </div>
+      </a>
+
+      <a href="#" class="rent-card">
         <img src="../images/container2.jpg" alt="Containerlägenhet">
         <h2>Furutåvägen 3</h2>
+
+        <div class="card-info">
+
+          <div class="card-meta">
+            <div class="size">
+              13 m
+              <sup>2</sup>
+            </div>
+
+            <div class="price">
+              3100 kr/mån
+            </div>
+          </div>
+
+          <p>
+            Suspendisse congue congue neque ut pulvinar. Sed ut luctus mi. Sed eget odio tellus. Ut sit amet dolor tellus.
+          </p>
+        </div>
       </a>
+    </div>
+
+    <!--Flats-->
+    <div class="category">
+      <h3>Lägenheter</h3>
+      <svg height="1" width="90vw">
+        <line x1="0" y1="0" x2="90vw" y2="0"></line>
+      </svg>
+    </div>
+
+    <div class="container">
       <a href="#" class="rent-card">
-          <img src="../images/flat1.jpg" alt="Containerlägenhet">
-          <h2>Furutåvägen 4</h2>
-        </a>
+        <img src="../images/flat1.jpg" alt="Lägenhet">
+        <h2>Furutåvägen 4</h2>
+
+        <div class="card-info">
+
+          <div class="card-meta">
+            <div class="size">
+              35 m
+              <sup>2</sup>
+            </div>
+
+            <div class="price">
+              6300 kr/mån
+            </div>
+          </div>
+
+          <p>
+            Suspendisse congue congue neque ut pulvinar. Sed ut luctus mi. Sed eget odio tellus. Ut sit amet dolor tellus.
+          </p>
+        </div>
+
+      </a>
+    </div>
+
   </section>
   <!--End main content-->
 
