--- a/app/about.html
+++ b/app/about.html
@@ -66,6 +66,47 @@
     </section>
 
 
+    <!--
+        FOOTER
+    -->
+    <footer>
+        <!-- The roof of the footer -->
+        <div class="footer-top"></div>
+
+        <!-- The footer content -->
+        <div class="base">
+            <h2>Studenträddarna</h2>
+
+            <!-- Contact -->
+            <div class="contact">
+                <p class="mejl">studentraddarna@live.se</p>
+                <p class="telephone">0470-123 567</p>
+            </div>
+
+            <!-- Navigation -->
+            <ul class="navigation">
+                <li>
+                    <a href="">Lediga bostäder</a>
+                </li>
+                <li>
+                    <a href="">Registrering</a>
+                </li>
+                <li>
+                    <a href="">Om oss</a>
+                </li>
+                <li>
+                    <a href="">Mina sidor</a>
+                </li>
+            </ul>
+
+            <!-- Social links -->
+            <div class="social">
+                <span class="fa fa-facebook-square"></span>
+                <span class="fa fa-twitter"></span>
+                <span class="fa fa-instagram"></span>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
