removed unused mixins + updated reg page with header

--- a/app/reg.html
+++ b/app/reg.html
@@ -15,6 +15,41 @@
 
 <body>
 
+    <!-- Hero image -->
+    <header></header>
+
+    <nav>
+
+        <!-- Hamburger icon -->
+        <input class="triggs" type="checkbox" id="navbutton">
+        <label for="navbutton" class="navlabel">
+            <a> &#9776</a>
+        </label>
+
+        <!-- Navigation menu -->
+        <ul>
+            <li>
+                <a href="index.html">Hem</a>
+            </li>
+
+            <li>
+                <a href="lediga.html">Lediga Bostäder</a>
+            </li>
+            <li class="active">
+                <a href=about.html "">Om Oss</a>
+            </li>
+
+            <li>
+                <a href="#">Logga In</a>
+            </li>
+            <li>
+                <a href="#">Registrera Dig</a>
+            </li>
+
+        </ul>
+        <!-- main_menu-->
+    </nav>
+
     <main id="register">
 
         <div class="register-top">
