index page finished

--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,46 @@
 
 <body>
 
-  <!--Header with navbar here-->
-  <!--End header-->
+  <!--HEADER can be found in _headernav.scss-->
+  <header>
+
+  </header>
+  <!--
+    NAVBAR
+  -->
+  <nav>
+
+    <input class="triggs" type="checkbox" id="navbutton">
+    <label for="navbutton" class="navlabel">
+      <a> &#9776</a>
+    </label>
+
+
+
+    <ul>
+      <li>
+        <a href="index.html">Hem</a>
+      </li>
+
+      <li>
+        <a href="lediga.html">Lediga Bostäder</a>
+      </li>
+      <li class="active">
+        <a href=about.html "">Om Oss</a>
+      </li>
+
+      <li>
+        <a href="#">Logga In</a>
+      </li>
+      <li>
+        <a href="#">Registrera Dig</a>
+      </li>
+
+    </ul>
+    <!-- main_menu-->
+
+  </nav>
+  <!-- End navbar-->
 
   <!-- 
     MAIN CONTENT
@@ -131,8 +169,22 @@
 
       </a>
     </div>
-
+    <button>Alla bostäder</button>
   </section>
+
+  <div class="index-bottom">
+    <div class="cite">
+
+      <div class="sentence">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad eveniet consectetur repellat accusantium molestiae iusto quis. Autem possimus exercitationem rem culpa ad corporis tempore perspiciatis?
+      </div>
+
+      <div class="person">
+        Fattig Student
+      </div>
+
+    </div>
+  </div>
   <!--End main content-->
 
   <!--
@@ -155,16 +207,16 @@
       <!-- Navigation -->
       <ul class="navigation">
         <li>
-          <a href="">Lediga bostäder</a>
+          <a href="lediga.html">Lediga bostäder</a>
         </li>
         <li>
-          <a href="">Registrering</a>
+          <a href="reg.html">Registrering</a>
         </li>
         <li>
-          <a href="">Om oss</a>
+          <a href="about.html">Om oss</a>
         </li>
         <li>
-          <a href="">Mina sidor</a>
+          <a href="#">Mina sidor</a>
         </li>
       </ul>
 
