--- a/app/about.html
+++ b/app/about.html
@@ -44,7 +44,7 @@
                 <a href="#">Logga In</a>
             </li>
             <li>
-                <a href="#">Registrera Dig</a>
+                <a href="reg.html">Registrera Dig</a>
             </li>
 
         </ul>
@@ -57,7 +57,7 @@
         <h1 class="h1top">Vad kan vi göra för dig?</h1>
 
         <div class="imggrid">
-            <img src="img/filterimg.jpg" class="bottomimg" width="100%" height="auto" />
+            <!-- <img src="img/filterimg.jpg" class="bottomimg" width="100%" height="auto" /> -->
             <img src="img/about.jpg" class="topimg" alt="about" />
         </div>
         <div class="abouttext">
