Edited readme, prototyp, gulpfile + comments

--- a/app/reg.html
+++ b/app/reg.html
@@ -18,8 +18,10 @@
     <!-- Hero image -->
     <header></header>
 
+    <!--
+        NAVIGATION 
+    -->
     <nav>
-
         <!-- Hamburger icon -->
         <input class="triggs" type="checkbox" id="navbutton">
         <label for="navbutton" class="navlabel">
@@ -47,11 +49,15 @@
             </li>
 
         </ul>
-        <!-- main_menu-->
     </nav>
+    <!-- END navigation -->
 
+    <!--
+        MAIN
+    -->
     <main id="register">
 
+        <!-- Introduction -->
         <div class="register-top">
             <img src="images/reg.jpg" alt="Registrera dig">
             <h1>Registrera dig</h1>
@@ -60,6 +66,7 @@
                 scelerisque nibh, ac rhoncus augue pharetra nec. Maecenas sodales sem at tincidunt tincidunt.</p>
         </div>
 
+        <!-- Register form -->
         <div class="form">
             <form>
                 <input type="text" id="firstname" name="firstname" placeholder="Förnamn">
@@ -70,6 +77,7 @@
             </form>
         </div>
 
+        <!-- Citations -->
         <div class="cite-collection">
             <div class="cite">
                 <p class="sentence">Nulla facilisi. Curabitur</p>
@@ -85,8 +93,8 @@
                 <p class="person">Fattig Student</p>
             </div>
         </div>
-
     </main>
+    <!-- END main -->
 
     <!--
         FOOTER
@@ -129,6 +137,7 @@
             </div>
         </div>
     </footer>
+    <!-- END footer -->
 
 </body>
 
